# tester

./: AGENTS.md  pyproject.toml
.agent/: Dockerfile
.agent/tests/: e2e_cli.py
docs/: system-overview.md
docs/plans/: 2026-01-06-autonomous-sdet-design.md  2026-01-06-autonomous-sdet-plan.md
sdet_agent/: __init__.py  cli.py  container.py  observe.py  plan.py  runner.py
tests/: conftest.py  test_cli_entry.py  test_container.py  test_observe.py  test_plan.py  test_runner_smoke.py
